[BUG #7717] On iOS7 the headers are partially covered by the browser's chrome in landscape view
* Setting window.scrollTo(0,0) on orientationChange event.
* Setting height of the root element to window.innerHeight because document.clientHeight is calculated 20px too big.
* Adding a lower page offset for drawers about 20px.

--- a/framework/source/resource/qx/mobile/css/android.css
+++ b/framework/source/resource/qx/mobile/css/android.css
@@ -621,6 +621,9 @@ input, select, .text-area {
 .root.portrait .drawer:not(.hidden) + .master-detail-detail {
   pointer-events: none; }
 
+.root.ios .master-detail-master > * {
+  padding-bottom: 20px; }
+
 .menu {
   min-width: 200px; }
 
@@ -874,6 +877,7 @@ input, select, .text-area {
   display: block;
   position: absolute;
   background-color: #fff;
+  -webkit-backface-visibility: hidden;
   height: 25px;
   width: 25px;
   top: -6px;
